--- a/index.html
+++ b/index.html
@@ -6,12 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Windmill Custom Component Dev</title>
   </head>
-  <body>
+  <body style="height: 100%; width: 100%; margin: 0">
     <div
-      style="width: 100%; margin-bottom: 40px; margin-left: 20px"
-      id="controls"
-    ></div>
-    <div class="__COMPONENT_NAME__" id="root"></div>
+      style="
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: stretch;
+        margin-top: 10px;
+      "
+    >
+      <div style="flex: 0 1 200px">
+        <div
+          style="padding: 0 30px; border-right: 1px solid"
+          id="controls"
+        ></div>
+        <div style="padding: 30px 30px">
+          Outputs:
+          <div
+            id="logs"
+            style="max-height: 300px; overflow: auto; text-align: left"
+          ></div>
+        </div>
+      </div>
+      <div
+        style="
+          flex: 1 1;
+          margin-right: 5px;
+          max-width: 100%;
+          max-height: 100%;
+          overflow: auto;
+          padding: 10px;
+        "
+      >
+        <div
+          class="__COMPONENT_NAME__"
+          style="resize: both; overflow: auto; border: 1px solid black"
+          id="root"
+        ></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
